// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakpointSplitView with hard clipping 1`] = `
Array [
  "volvox_samspec",
]
`;

exports[`BreakpointSplitView with soft clipping 1`] = `
Array [
  "pacbio_hg002",
]
`;
